# blogging_system

./: .gitignore  README.md  pyproject.toml
blogging_system/: db.sqlite3  requirements.txt
blogging_system/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
blogging_system/accounts/migrations/: 0001_initial.py  0002_resettoken.py
blogging_system/blogging_system/: asgi.py  settings.py  urls.py  wsgi.py
blogging_system/comments/: admin.py  forms.py  models.py  urls.py
blogging_system/comments/migrations/: 0001_initial.py
blogging_system/posts/: admin.py  forms.py  models.py  urls.py  views.py
blogging_system/posts/migrations/: 0001_initial.py  0002_delete_comment.py
blogging_system/templates/: activate_email.html  activate_reset_password.html  base.html
blogging_system/templates/accounts/: login.html  password_reset.html  reset_initate.html
blogging_system/templates/partials/: navbar.html
blogging_system/templates/posts/: common_list.html  detail.html  user_list.html
