[tool.poetry]
name = "blogging_system"
version = "1"
description = "Blogging system where people can do blogging"
authors = ["bibekgupta3333 <bibekgupta3333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-ckeditor = "^6.0.0"
django-taggit = "^1.3.0"
Pillow = "^9.0.1"
django-schema-graph = "^1.2.0"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
